package com.example.demo.enums;

import lombok.Getter;

@Getter
public enum FieldType {

    SHORT_TEXT,
    TEXT_AREA,
    NUMBER,
    CHECKBOX,
    RADIO,
    DATE,
    DATETIME,
    RTF,
    SINGLE_SELECT,
    MULTI_SELECT,
    CASCADING_SELECT,
    LINK,
    SINGLE_USER,
    MULTI_USER,
    SINGLE_GROUP,
    MULTI_GROUP

}

