package com.example.demo.enums;

public enum ItemTypeCategory {
    STANDARD,
    SUBTASK,
    CONTAINER
}
