package com.example.demo.enums;

public enum RoleName {
    ADMIN,
    USER
}
