package com.example.demo.enums;

public enum ScopeType {
    PROJECT,
    TENANT
}
