package com.example.demo.enums;

public enum StatusCategory {
    BACKLOG,
    PROGRESS,
    COMPLETED

}
